# EigenFunction

./: .flake8  ARCHITECTURE.md  DEMO_README.md  LICENSE  MATH_VERIFICATION.md  README.md  RELEASE_NOTES.md  benchmarks.py  chain_validator.py  cupy_similarity.py  demo_loop_prevention.py  eigen_attention.py  eigen_memory.py  eigen_transformer.py  examples_gpu.py  examples_loop_prevention.py  feedback_transformer.py  gpu_similarity.py  paradox_detector.py  pyproject.toml  requirements.txt  similarity.py  spacetime_feedback.py  standard_attention.py  test_eigen_modules.py  test_feedback_transformer.py  test_gpu_similarity.py  test_pytorch_modules.py  test_similarity.py  test_spacetime_feedback.py  verify_hidden_variable.py  verify_spacetime_math.py
.github/workflows/: ci.yml
tests/: __init__.py  test_eigen_modules.py
